Add CIE LAB input method

--- a/src/FlossApp.Wasm/Components/RichColorPicker.razor
+++ b/src/FlossApp.Wasm/Components/RichColorPicker.razor
@@ -25,6 +25,10 @@ else if (Schema is ColorSchema.Cmyk)
 {
     <CmykPicker @bind-Value="ViewModel.SelectedColor" />
 }
+else if (Schema is ColorSchema.CieLab)
+{
+    <CieLabPicker @bind-Value="ViewModel.SelectedColor" />
+}
 else
 {
     <MudAutocomplete T="RichColorModel" Label="@Label" @bind-Value="Value"
