--- a/src/FlossApp.Wasm/Layout/MainLayout.razor
+++ b/src/FlossApp.Wasm/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
-﻿@using FlossApp.Wasm.Components
-@using FlossApp.Wasm.Consts
+﻿@using FlossApp.Application.Consts
+@using FlossApp.Wasm.Components
 @using FlossApp.Wasm.Navigation
 @using FlossApp.Wasm.Themes
 @inherits LayoutComponentBase
