--- a/src/FlossApp.Wasm/Pages/EyedropperPage.razor
+++ b/src/FlossApp.Wasm/Pages/EyedropperPage.razor
@@ -27,3 +27,17 @@
                     @bind-Value="PageViewModel.ComparisonAlgorithm" />
     </div>
 </div>
+
+<div class="row mt-1">
+    <MudPaper Class="my-1 p-1">
+        <div class="row">
+            <div class="col col-auto color-sample-container">
+                <div class="color-sample" style="background-color: #@PageViewModel.SelectedColor.AsHex();"></div>
+            </div>
+            <div class="col">
+                <h4>@PageViewModel.SelectedColor.Name</h4>
+                @PageViewModel.SelectedColor.Number
+            </div>
+        </div>
+    </MudPaper>
+</div>
